src/main/java/com/example/usersubscriptionservice/error/UserNotFoundException.java
package com.example.usersubscriptionservice.error;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
